--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="thememeteam.com.yummycrummyapp5" >
-
+    <!--lskghdgh-->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
